part3/exercise02/gke-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: logpong-svc
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
