part3/exercise02/gke-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logpong-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logpong-svc
            port:
              number: 80
